Bug 1755710 - Fix the assertion in `WhiteSpaceVisibilityKeeper::MakeSureToKeepVisibleStateOfWhiteSpacesAroundDeletingRange` r=m_kato

The assertion was introduced in bug 1655988.  However, the assertion assumes
that the given range ends before start of the deleting range (invisible
white-spaces), but that is wrong, the range may ends in middle of or end of
collapsible white-spaces.  Therefore, this patch just fixes the assertion.

Depends on D180783

Differential Revision: https://phabricator.services.mozilla.com/D180785